--- a/res/drawable/application_filter_border.xml
+++ b/res/drawable/application_filter_border.xml
@@ -1,12 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
+
     <!-- There is a bug in Android, so we can't use themed colors here... -->
-    <stroke android:width="2dp" android:color="@color/color_filter_border" />
-    <solid android:color="@color/color_filter_background" />
+    <stroke
+        android:width="1dp"
+        android:color="@color/color_filter_border" />
+
     <padding
+        android:bottom="6dp"
         android:left="6dp"
-        android:top="6dp"
         android:right="6dp"
-        android:bottom="6dp" />
-    <corners android:radius="6dp" />
+        android:top="6dp" />
+
+    <gradient
+        android:angle="90"
+        android:startColor="@color/color_filter_background"
+        android:endColor="@color/color_filter_background2"
+        android:type="linear"
+        android:useLevel="false" />
+
+    <corners android:radius="3dp" />
+
 </shape>
