--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="color_dangerous_light">#3CF83A3A</color>
     <color name="color_dangerous_dark">#50F83A3A</color>
     <color name="color_filter_border">#70707070</color>
-    <color name="color_filter_background">#30909090</color>
+    <color name="color_filter_background">#30404040</color>
+    <color name="color_filter_background2">#30D0D0D0</color>
 
 </resources>
