Moved 'category' out of the collapsible filters

--- a/res/layout/mainlist.xml
+++ b/res/layout/mainlist.xml
@@ -9,7 +9,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".ActivityMain" >
 
-    <!-- Filters -->
+    <!-- Frame -->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,6 +20,37 @@
         android:orientation="vertical" >
 
         <!-- Restriction category -->
+
+        <LinearLayout
+            android:id="@+id/llCategory"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="@string/title_category"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textIsSelectable="false" />
+
+            <Spinner
+                android:id="@+id/spRestriction"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <ImageView
+                android:id="@+id/imgInfo"
+                android:layout_width="32dip"
+                android:layout_height="32dip"
+                android:layout_gravity="center_vertical"
+                android:contentDescription="@string/help_application"
+                android:src="?attr/icon_info" />
+        </LinearLayout>
+
+        <!-- Filters -->
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -33,36 +64,25 @@
                 android:contentDescription="@string/title_category"
                 android:src="?attr/icon_expander_maximized" />
 
-            <LinearLayout
-                android:id="@+id/llCategory"
-                android:layout_width="match_parent"
+            <EditText
+                android:id="@+id/etFilter"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="3dp"
                 android:layout_toRightOf="@id/imgToggleFilters"
-                android:orientation="horizontal" >
+                android:ems="10"
+                android:hint="@string/help_application"
+                android:inputType="textNoSuggestions"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="@string/title_category"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textIsSelectable="false" />
-
-                <Spinner
-                    android:id="@+id/spRestriction"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1" />
-
-                <ImageView
-                    android:id="@+id/imgInfo"
-                    android:layout_width="32dip"
-                    android:layout_height="32dip"
-                    android:layout_gravity="center_vertical"
-                    android:contentDescription="@string/help_application"
-                    android:src="?attr/icon_info" />
-            </LinearLayout>
+            <ImageView
+                android:id="@+id/imgClear"
+                android:layout_width="24dip"
+                android:layout_height="24dip"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:contentDescription="@string/help_application"
+                android:src="?attr/icon_clear_grayed" />
 
             <TextView
                 android:id="@+id/tvFilterDetail"
@@ -98,32 +118,6 @@
                 android:layout_gravity="center_vertical"
                 android:contentDescription="@string/help_internet"
                 android:src="?attr/icon_internet_grayed" />
-
-            <RelativeLayout
-                android:layout_width="0dip"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" >
-
-                <EditText
-                    android:id="@+id/etFilter"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="6dip"
-                    android:hint="@string/help_application"
-                    android:inputType="textNoSuggestions"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
-
-                <ImageView
-                    android:id="@+id/imgClear"
-                    android:layout_width="24dip"
-                    android:layout_height="24dip"
-                    android:layout_alignRight="@id/etFilter"
-                    android:layout_centerVertical="true"
-                    android:layout_gravity="center_vertical"
-                    android:contentDescription="@string/help_application"
-                    android:src="?attr/icon_clear_grayed" />
-            </RelativeLayout>
 
             <CheckBox
                 android:id="@+id/cbFilter"
