--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -1,5 +1,6 @@
 <resources>
 
+    <attr name="icon_checked" format="reference" />
     <attr name="icon_granted" format="reference" />
     <attr name="icon_granted_grayed" format="reference" />
     <attr name="icon_help" format="reference" />
