--- a/res/layout/mainlist.xml
+++ b/res/layout/mainlist.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="?attr/drawable_background"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -16,8 +17,12 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
         android:layout_marginRight="@dimen/activity_vertical_margin"
-        android:background="@drawable/application_filter_border"
-        android:orientation="vertical" >
+        android:background="?attr/drawable_card"
+        android:orientation="vertical"
+        android:paddingBottom="6dp"
+        android:paddingLeft="6dp"
+        android:paddingRight="6dp"
+        android:paddingTop="6dp" >
 
         <!-- Restriction category -->
 
