--- a/res/values-v14/styles.xml
+++ b/res/values-v14/styles.xml
@@ -18,6 +18,8 @@
         <item name="icon_clear">@drawable/cross_holo_dark</item>
         <item name="icon_clear_grayed">@drawable/cross_grayed_out_holo_dark</item>
         <item name="icon_frozen">@drawable/frozen_holo_dark</item>
+        <item name="drawable_background">@android:color/black</item>
+        <item name="drawable_card">@drawable/card_dark</item>
         <item name="color_dangerous">@color/color_dangerous_dark</item>
     </style>
 
@@ -39,6 +41,8 @@
         <item name="icon_clear">@drawable/cross_holo_light</item>
         <item name="icon_clear_grayed">@drawable/cross_grayed_out_holo_light</item>
         <item name="icon_frozen">@drawable/frozen_holo_light</item>
+        <item name="drawable_background">@color/home_background_ligth</item>
+        <item name="drawable_card">@drawable/card_light</item>
         <item name="color_dangerous">@color/color_dangerous_light</item>
     </style>
 
