--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -17,6 +17,8 @@
     <attr name="icon_clear" format="reference" />
     <attr name="icon_clear_grayed" format="reference" />
     <attr name="icon_frozen" format="reference" />
+    <attr name="drawable_background" format="reference" />
+    <attr name="drawable_card" format="reference" />
     <attr name="color_dangerous" format="reference" />
 
 </resources>
