--- a/res/layout/mainlist.xml
+++ b/res/layout/mainlist.xml
@@ -30,6 +30,7 @@
             android:id="@+id/llCategory"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="?attr/drawable_divider"
             android:orientation="horizontal" >
 
             <TextView
