--- a/res/values-v14/styles.xml
+++ b/res/values-v14/styles.xml
@@ -20,6 +20,7 @@
         <item name="icon_frozen">@drawable/frozen_holo_dark</item>
         <item name="drawable_background">@android:color/black</item>
         <item name="drawable_card">@drawable/card_dark</item>
+        <item name="drawable_divider">@drawable/divider_dark</item>
         <item name="color_dangerous">@color/color_dangerous_dark</item>
     </style>
 
@@ -43,6 +44,7 @@
         <item name="icon_frozen">@drawable/frozen_holo_light</item>
         <item name="drawable_background">@color/home_background_ligth</item>
         <item name="drawable_card">@drawable/card_light</item>
+        <item name="drawable_divider">@drawable/divider_light</item>
         <item name="color_dangerous">@color/color_dangerous_light</item>
     </style>
 
